# androidtvremote2

./: .gitignore  .pre-commit-config.yaml  README.md  TvKeys.txt  demo.py  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml  python-package.yml  python-publish.yml
src/: demo.py
src/androidtv_remote/: __init__.py  androidtv_remote.py  base.py  pairing.py  polo.proto  polo_pb2.py  remote.py  remotemessage_pb2.py
src/androidtvremote2/: __init__.py  androidtv_remote.py  base.py  certificate_generator.py  const.py  exceptions.py  model.py  pairing.py  polo.proto  polo_pb2.py  polo_pb2.pyi  remote.py  remotemessage.proto  remotemessage_pb2.py  remotemessage_pb2.pyi  voice_stream.py
tests/: __init__.py  test_androidtv_remote.py
